NOOP: Misc sidebar fixes * Support calendar_date in new calendar create * Fix sidebar sizing on description expand/collapse * Wizards on repeaters and groups: wait until explicity done/skip (don't trigger on change) * Fix wizards overlapping X on repeaters * Put error message on validation fail * Auto-set Done & Skip wizard buttons on fields as appropriate * Auto-set section expand wizard buttons on selectable sections * Move 'Location' default name into locationCreate config

--- a/app/styles/grid-sidebar.sass
+++ b/app/styles/grid-sidebar.sass
@@ -293,6 +293,7 @@
             padding: 0.3em
             position: absolute
             top: 0
+            z-index: 1
 
         &.group .removeLink
           left: 0.75em
